--- a/budget_app_backend/pom.xml
+++ b/budget_app_backend/pom.xml
@@ -8,13 +8,13 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.budget</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.Budget.Application</groupId>
+	<artifactId>Budget-Application</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Budget Application</name>
+	<name>Budget-Application</name>
 	<description>Budget Application</description>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
